src/test/ui/async-await/suggest-switching-edition-on-await.stderr
error[E0609]: no field `await` on type `await_on_struct_missing::S`
  --> $DIR/suggest-switching-edition-on-await.rs:9:7
   |
LL |     x.await;
   |       ^^^^^ unknown field
   |
   = note: to `.await` a `Future`, switch to Rust 2018 or later
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0609]: no field `await` on type `await_on_struct_similar::S`
  --> $DIR/suggest-switching-edition-on-await.rs:22:7
   |
LL |     x.await;
   |       ^^^^^ help: a field with a similar name exists: `awai`
   |
   = note: to `.await` a `Future`, switch to Rust 2018 or later
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0609]: no field `await` on type `Pin<&mut dyn Future<Output = ()>>`
  --> $DIR/suggest-switching-edition-on-await.rs:31:7
   |
LL |     x.await;
   |       ^^^^^ unknown field
   |
   = note: to `.await` a `Future`, switch to Rust 2018 or later
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0609]: no field `await` on type `impl Future<Output = ()>`
  --> $DIR/suggest-switching-edition-on-await.rs:40:7
   |
LL |     x.await;
   |       ^^^^^
   |
   = note: to `.await` a `Future`, switch to Rust 2018 or later
   = help: set `edition = "2018"` in `Cargo.toml`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0609`.
